tests/transpiler/x/java/avg_builtin.error
exit status 1
Main.java:4: error: cannot find symbol
        System.out.println(((new int[]{1, 2, 3}.stream().mapToDouble(v -> ((Number)v).doubleValue()).average().orElse(0)) % 1 == 0 ? (int)(new int[]{1, 2, 3}.stream().mapToDouble(v -> ((Number)v).doubleValue()).average().orElse(0)) : (new int[]{1, 2, 3}.stream().mapToDouble(v -> ((Number)v).doubleValue()).average().orElse(0))));
                                               ^
  symbol:   method stream()
  location: class int[]
Main.java:4: error: cannot find symbol
        System.out.println(((new int[]{1, 2, 3}.stream().mapToDouble(v -> ((Number)v).doubleValue()).average().orElse(0)) % 1 == 0 ? (int)(new int[]{1, 2, 3}.stream().mapToDouble(v -> ((Number)v).doubleValue()).average().orElse(0)) : (new int[]{1, 2, 3}.stream().mapToDouble(v -> ((Number)v).doubleValue()).average().orElse(0))));
                                                                                                                                                             ^
  symbol:   method stream()
  location: class int[]
Main.java:4: error: cannot find symbol
        System.out.println(((new int[]{1, 2, 3}.stream().mapToDouble(v -> ((Number)v).doubleValue()).average().orElse(0)) % 1 == 0 ? (int)(new int[]{1, 2, 3}.stream().mapToDouble(v -> ((Number)v).doubleValue()).average().orElse(0)) : (new int[]{1, 2, 3}.stream().mapToDouble(v -> ((Number)v).doubleValue()).average().orElse(0))));
                                                                                                                                                                                                                                                             ^
  symbol:   method stream()
  location: class int[]
3 errors
